styles.css
div {
    border: 1px solid black; 
    box-sizing: border-box;
}
body{
    display: flex;
    flex-direction: column;
    align-items: center;
   
}
#container {
    background-color: yellow;
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    width:1000px;
    margin: 0px;
    height: 1000px;
    
}

/*.squareDiv {
    background-color: blue;
    flex: 1 1 6%;
    margin:0%;
    

}

